# internal/apiserver/apiserver.go
@@ -16,6 +16,7 @@ import (
 	permviewstorage "k8s-rbac-engine/internal/registry/rolepermissionsview"
 	subjectgraphstorage "k8s-rbac-engine/internal/registry/subjectgraphreview"
 	subjectpermstorage "k8s-rbac-engine/internal/registry/subjectpermissionsview"
+	subjectsbyselstorage "k8s-rbac-engine/internal/registry/subjectsbyselectorview"
 	"k8s-rbac-engine/pkg/apis/rbacgraph"
 	"k8s-rbac-engine/pkg/apis/rbacgraph/v1alpha1"
 	"k8s-rbac-engine/pkg/engine"
@@ -77,6 +78,7 @@ func (c CompletedConfig) New() (*RbacGraphServer, error) {
 	v1alpha1storage["rolepermissionsviews"] = permviewstorage.NewREST(c.Indexer, c.ReportLookup)
 	v1alpha1storage["subjectpermissionsviews"] = subjectpermstorage.NewREST(c.Engine, c.Indexer, c.AuthzResolver)
 	v1alpha1storage["subjectgraphreviews"] = subjectgraphstorage.NewREST(c.Engine, c.Indexer, c.AuthzResolver)
+	v1alpha1storage["subjectsbyselectorviews"] = subjectsbyselstorage.NewREST(c.Engine, c.Indexer, c.AuthzResolver)
 	apiGroupInfo.VersionedResourcesStorageMap[v1alpha1.Version] = v1alpha1storage
 
 	if err := s.GenericAPIServer.InstallAPIGroup(&apiGroupInfo); err != nil {
